kubernetes/apps/n8n/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  parentRefs:
    - name: eg-private
      namespace: envoy-gateway-system
      sectionName: https-admin
  hostnames:
    - "n8n.admin.michaelmuzafarov.dev"
  rules:
    - backendRefs:
        - name: n8n
          port: 5678
